Added settings for API keys
